# azki

./: .gitignore  LICENSE-MIT  README.md  README_JP.md
.github/: copilot-instructions.md
Docs/: Spec.md
backend_core/: Cargo.toml
frontend_dll/: build.zig  build.zig.zon
frontend_dll/src/: com.zig  globals.zig  main.zig  registry.zig  tsf.zig  win32.zig
frontend_dll/src/win32/: base.zig  root.zig  tsf.zig
